tests/snapshots/indent_operations_test__shift_left_G.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 4

Buffer:
    a
[b]
c
d
