tests/snapshots/indent_operations_test__shift_left_line.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[i]ndented line
    another
