tests/snapshots/indent_operations_test__shift_right_2k.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 5

Buffer:
a
b
[c]
d
e
