tests/snapshots/indent_operations_test__shift_right_G.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 4:4
Lines: 5

Buffer:
line 1
line 2
    line 3
    line 4
    [l]ine 5
