tests/snapshots/indent_operations_test__shift_right_already_indented.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 2

Buffer:
    [ ]   already indented
plain line
