tests/snapshots/indent_operations_test__shift_right_gg.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 3:0
Lines: 4

Buffer:
line 1
line 2
line 3
[l]ine 4
