tests/snapshots/indent_operations_test__shift_right_j.snap
---
source: tests/indent_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:4
Lines: 4

Buffer:
    line 1
    [l]ine 2
line 3
line 4
